# agentkube

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  build.sh  bun.lockb  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  go.mod  go.sum  index.html  investigation.json  package-lock.json  package.json  pgadmin.json  postman.json  protocols.yml  settings.json  tailwind.config.js  test.js  vite.config.ts  watcher.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  build-linux-aarch64.yml  build-linux-x86_64.yml  build-macos-arm64.yml  build-macos-intel.yml  build-operator-all.yml  build-operator-linux.yml  build-orchestrator-all.yml  build-orchestrator-linux.yml  build-windows-i686.yml  build-windows-x64.yml  build-windows-x86_64.yml  publish.yml  release.yml  stale_issues.yml
.nginx/: nginx.conf
assets/logos/: icon.icns
cmd/server/: main.go
config/: config.go  sample.go
connectors/: qdrant.ts  redis.ts  supabase.ts
controllers/alerts/: alerts.controller.ts
controllers/apikey/: apikey.controller.ts
controllers/billing/: billing.controller.ts
controllers/chat/: chat.controller.ts
controllers/cluster/: cluster.controller.ts
controllers/content/: content.ts
controllers/docusign/: docusign.controller.ts
controllers/investigate/: investigate.controller.ts
controllers/organization/: organization.controller.ts
controllers/response-protocol/: response-protocol-stats.ts  response-protocol.controller.ts
controllers/share/: share.controller.ts
controllers/user/: user.controller.ts
deploy/mac/: entitlements.mac.plist
download/: agentkube-latest.json  latest.json
internal/: embedding.ts  prompt.ts
internal/handlers/: canvas_handler.go  handl.txt  handlers.go  helm_handler.go  metrics_handler.go  search_handlers.go  shell_handler.go  term_handler.go  trivy_handlers.go  vul_handler.go  watcher_handler.go
internal/multiplexer/: multiplexer.go
internal/operator/: README.md  build.sh  go.sum  makefile  watcher.yaml
internal/orchestrator/: README.md  build.installer.py  build.py  main.py  migrate_add_resolved.py  requirements.linux.txt  requirements.txt  requirements.win.txt
middleware/: auth.middleware.ts  sse.middleware.ts
prisma/: schema.prisma
public/: splashscreen.html
queues/: further-investigate.queue.ts  queue.backup.ts  queue.ts  smart-investigation.queue.ts
routes/: routes.ts
scripts/: encryption.ts
src/: App.tsx  config.ts  index.ts  main.tsx
src-tauri/: Cargo.toml  nginx-deployment-2.yaml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  splashscreen.json
src-tauri/deploy/mac/: entitlements.mac.plist
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  network_commands.rs  network_monitor.rs
src-tauri/src/browser/: mod.rs
src-tauri/src/sidecar/: sidecar.rs
src-tauri/src/terminal/: mod.rs
types/: further-investigation.types.ts  investigation.types.ts
utils/: encryption.ts  investigation_summary.ts  parse_intent_summary.ts
(+791 files in other folders)
