[package]
name = "agentkube"
version = "0.1.0"
description = "A Kubernetes Management IDE"
authors = ["siddhantprateek"]
license = "MIT"
repository = "github.com/agentkube/platform"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-http = { version = "2.0.0-rc", features = ["unsafe-headers"] }
tauri-plugin-cors-fetch = "2.1.1"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-websocket = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tokio = "1.44.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"
